Restore ListUtilsTest